--- a/src/Less/Shared/Form.less
+++ b/src/Less/Shared/Form.less
@@ -4,6 +4,7 @@
   width: 100%;
   header,
   button {
+    border-radius: 0;
     color: #000;
     text-align: center;
     background-color: #d7d9f2;
