--- a/src/Less/Shared/Purpose.less
+++ b/src/Less/Shared/Purpose.less
@@ -18,5 +18,7 @@
 }
 
 @media screen and (max-width: 1024px) {
-.shared.purpose {text-align: center;}
+  .shared.purpose {
+    text-align: center;
+  }
 }
